see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

29-Apr-2013 Jean-Marie Simonet
 $ Removing deprecated lang strings for the flash Uploader

28-Apr-2013 Jean-Marie Simonet
 $ Adding installation languages : ro-RO and gd-GB

-------------------- 3.1.1 Stable Release [26-Apr-2013] ------------------

26-Apr-2013 Mark Dexter
 # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
 # [#30681] Error in Database tab in Extension Manager.
 # [#30697] Invalid tab end in article edit page. Thanks Dennis Hermatski.
 # [#30725] Exception thrown for empty path. Thanks Elin Waring.
 # [#30679] Fix two Tags-related API issues. Thanks Elin Waring.
 # [#30632] *Menu item Alias required setting. Thanks Jean-Marie Simonet.
 # [#29957] Administrator interface dropdown menus not working on tablets. Thanks Denia Si.
 # [#30660] Corrects font-file stack order. Thanks Seth Warburton.
 # [#30668] *Beez3 missing JHtml::_('behavior.caption');. Thanks Jean-Marie Simonet.
 # [#30398] com_tags show "{loadmodule..." when listing items. Thanks Elin Waring.
 # [#30495] Type check line 31, TemplatesHelper::getPositions. Thanks Christoffer Rødvik.

-------------------- 3.1.0 Stable Release [24-Apr-2013] ------------------

23-Apr-2013 Mark Dexter
 # [#30652] Commit for issue 29916 broke Smart Search indexing. Thanks Don Gilbert.
 # [#30639] Hathor Tags issues Tag edit view. Thanks Elin Waring.
 # [#30640] Hathor - Not tag field shown in core content. Thanks Roberto Sequra.
 # [#30653] Use of undefined DEBUG constant. Thanks Elin Waring.
 # [#30603] Tags: Similar Tags Module Shows the same article multiple time. Thanks Thomas Hunziker.