@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note3
 
+30-Apr-2013 Jean-Marie Simonet
+ # [#30488] Wrong default values for weblink icons in layout. Thanks THomas Hunziker.
+
 29-Apr-2013 Jean-Marie Simonet
  $ Removing deprecated lang strings for the flash Uploader
 
